--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "gulp-sass": "^1.2.4",
     "gulp-util": "^3.0.1",
     "keymirror": "^0.1.1",
+    "lodash": "^3.9.1",
+    "node-libs-browser": "^0.5.0",
     "object-assign": "^2.0.0",
     "sass-loader": "^0.3.1",
     "style-loader": "^0.8.2",
     "underscore": "^1.7.0",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.9.7",
+    "webpack-dev-server": "^1.8.2"
   }
 }
